--- a/README
+++ b/README
@@ -1,16 +1,15 @@
-This is a reader and graph display of the data from the Vuzix Wrap 920AR tracker.
-
-Note: you may have to edit the device name in WrapReader.cpp to another hidraw.
+A reader and graphic display of the data from the Vuzix Wrap 920AR tracker.
 
 Usage:
-for reading from the tracker: 
-    ./run
-this also creates .txt and .png data in the graphs folder
-
-.txt data can be replayed with:
-    python Graph.py < graphs/data.txt
-and .png images recreated with:
-    python Graph.py -png < graphs/data.txt
+    for reading from the tracker: 
+        ./run
+    this also creates .txt and .png data in the graphs folder
+    by default it reads from /dev/hidraw0, but can also accept a device name as an argument
+    
+    graphs of .txt data can be replayed with:
+        python Graph.py < graphs/data.txt
+    and .png images recreated with:
+        python Graph.py -png < graphs/data.txt
 
 Requirements:
     gcc
